Fix navbar for too long titles
Fix #18

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,6 +8,7 @@
 
 nav{
 	background-color: black;
+	flex-wrap: nowrap;
 }
 .navbar-brand{
 	margin-right: 0;
